--- a/index.html
+++ b/index.html
@@ -1,148 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRED & Crypto Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Crypto & FRED Indicatoren</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f2f5;
-      margin: 0;
-      padding: 20px;
+      margin: 20px;
+      background-color: #f7f9fc;
+      color: #333;
+      text-align: center;
     }
+
     h2 {
-      text-align: center;
+      margin-bottom: 10px;
     }
-    .controls, .calendar {
-      text-align: center;
-      margin: 10px auto;
+
+    .controls {
+      margin-bottom: 15px;
     }
-    canvas {
-      max-width: 95%;
-      margin: auto;
-      display: block;
+
+    .controls label {
+      margin-right: 10px;
     }
-    .calendar-container {
+
+    button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    #release-info {
+      margin-top: 40px;
+      text-align: left;
       max-width: 600px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 15px;
+      margin-left: auto;
+      margin-right: auto;
+      background: #ffffff;
+      border: 1px solid #ddd;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-    select, input[type="date"] {
-      margin: 0 5px;
-      padding: 5px;
+
+    #release-info h3 {
+      margin-top: 0;
     }
   </style>
 </head>
 <body>
+
   <h2>Crypto & FRED Indicatoren</h2>
 
   <div class="controls">
     <label><input type="checkbox" class="indicator" value="GDP"> BBP (GDP)</label>
     <label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
-    <label><input type="checkbox" class="indicator" value="CPALTT01EZM657N"> Inflatie (CPI)</label>
+    <label><input type="checkbox" class="indicator" value="CPIAUCNS"> Inflatie (CPI)</label>
+    <label><input type="checkbox" class="indicator" value="PPIACO"> Producentenprijsindex</label>
+    <label><input type="checkbox" class="indicator" value="PERMIT"> Nieuwe woningen</label>
+    <br>
     <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (€)</label>
-    <label><input type="checkbox" class="crypto" value="xrp"> XRP (€)</label>
+    <label><input type="checkbox" class="crypto" value="ripple"> XRP (€)</label>
     <label><input type="checkbox" class="crypto" value="vechain"> VeChain (€)</label>
+    <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle (€)</label>
+    <br>
     <button onclick="updateChart()">Update Grafiek</button>
   </div>
 
-  <div class="calendar">
-    <label>Van: <input type="date" id="startDate"></label>
-    <label>Tot: <input type="date" id="endDate"></label>
-  </div>
+  <canvas id="chart" width="1000" height="500"></canvas>
 
-  <canvas id="chart" height="100"></canvas>
+  <div id="release-info"></div>
 
-  <div class="calendar-container">
-    <h3>Recente FRED Releasedata</h3>
-    <ul id="releaseDates"></ul>
-  </div>
+  <script>
+    const ctx = document.getElementById('chart').getContext('2d');
+    let chart;
 
-<script>
-const ctx = document.getElementById('chart').getContext('2d');
-let chart;
+    const FRED_API_KEY = '2e36ea2956c8ea9b075070975eb33c66';
+    const FRED_BASE = 'https://api.stlouisfed.org/fred/series/observations';
+    const CRYPTO_API = 'https://api.coingecko.com/api/v3/coins';
 
-const FRED_API_KEY = '2e36ea2956c8ea9b075070975eb33c66';
-const FRED_BASE = 'https://api.stlouisfed.org/fred/series/observations';
-const FRED_RELEASE_DATES = 'https://api.stlouisfed.org/fred/releases/dates';
-const CRYPTO_API = 'https://api.coingecko.com/api/v3/coins';
+    async function fetchFredData(seriesId) {
+      const response = await fetch(`${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json`);
+      const data = await response.json();
+      return data.observations.map(obs => ({ x: obs.date, y: parseFloat(obs.value) }));
+    }
 
-function getRandomColor() {
-  return `rgb(${[1, 2, 3].map(() => Math.floor(Math.random() * 255)).join(',')})`;
-}
+    async function fetchCryptoPrices(id) {
+      const res = await fetch(`${CRYPTO_API}/${id}/market_chart?vs_currency=eur&days=365`);
+      const json = await res.json();
+      return json.prices.map(p => ({ x: new Date(p[0]).toISOString().split('T')[0], y: p[1] }));
+    }
 
-async function fetchFredData(seriesId, start, end) {
-  const response = await fetch(`${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json&observation_start=${start}&observation_end=${end}`);
-  const data = await response.json();
-  return data.observations.map(obs => ({ x: obs.date, y: parseFloat(obs.value) }));
-}
+    async function updateChart() {
+      const indicatorEls = document.querySelectorAll('.indicator:checked');
+      const cryptoEls = document.querySelectorAll('.crypto:checked');
+      const datasets = [];
 
-async function fetchCryptoPrices(id, start, end) {
-  const res = await fetch(`${CRYPTO_API}/${id}/market_chart/range?vs_currency=eur&from=${Date.parse(start)/1000}&to=${Date.parse(end)/1000}`);
-  const json = await res.json();
-  return json.prices.map(p => ({ x: new Date(p[0]).toISOString().split('T')[0], y: p[1] }));
-}
+      for (let el of indicatorEls) {
+        const data = await fetchFredData(el.value);
+        datasets.push({
+          label: `Econ. ${el.value}`,
+          data,
+          borderColor: getRandomColor(),
+          yAxisID: 'y',
+          tension: 0.3
+        });
+      }
 
-async function updateChart() {
-  const start = document.getElementById('startDate').value || '2020-01-01';
-  const end = document.getElementById('endDate').value || new Date().toISOString().split('T')[0];
+      for (let el of cryptoEls) {
+        const data = await fetchCryptoPrices(el.value);
+        datasets.push({
+          label: `Crypto ${el.value}`,
+          data,
+          borderColor: getRandomColor(),
+          yAxisID: 'y1',
+          tension: 0.3
+        });
+      }
 
-  const indicatorEls = document.querySelectorAll('.indicator:checked');
-  const cryptoEls = document.querySelectorAll('.crypto:checked');
-  const datasets = [];
+      if (chart) chart.destroy();
 
-  for (let el of indicatorEls) {
-    const data = await fetchFredData(el.value, start, end);
-    datasets.push({ label: `Econ. ${el.value}`, data, borderColor: getRandomColor(), yAxisID: 'y', tension: 0.3 });
-  }
+      chart = new Chart(ctx, {
+        type: 'line',
+        data: { datasets },
+        options: {
+          responsive: true,
+          interaction: { mode: 'index', intersect: false },
+          scales: {
+            y: { type: 'linear', position: 'left' },
+            y1: { type: 'linear', position: 'right' }
+          }
+        }
+      });
+    }
 
-  for (let el of cryptoEls) {
-    const data = await fetchCryptoPrices(el.value, start, end);
-    datasets.push({ label: `Crypto ${el.value}`, data, borderColor: getRandomColor(), yAxisID: 'y1', tension: 0.3 });
-  }
+    function getRandomColor() {
+      return `rgb(${[1, 2, 3].map(() => Math.floor(Math.random() * 255)).join(',')})`;
+    }
 
-  if (chart) chart.destroy();
+    async function fetchFredReleaseDates() {
+      try {
+        const response = await fetch(`https://api.stlouisfed.org/fred/releases/dates?api_key=${FRED_API_KEY}&file_type=json`);
+        const data = await response.json();
 
-  chart = new Chart(ctx, {
-    type: 'line',
-    data: { datasets },
-    options: {
-      responsive: true,
-      interaction: { mode: 'index', intersect: false },
-      scales: {
-        x: {
-          type: 'time',
-          time: { unit: 'month' },
-          title: { display: true, text: 'Datum' }
-        },
-        y: { type: 'linear', position: 'left', title: { display: true, text: 'Economische indicatoren' } },
-        y1: { type: 'linear', position: 'right', title: { display: true, text: 'Crypto (€)' }, grid: { drawOnChartArea: false } }
+        if (!data.release_dates) {
+          console.error("Geen release_dates gevonden in API response:", data);
+          return;
+        }
+
+        const container = document.getElementById('release-info');
+        container.innerHTML = '<h3>Laatste FRED Releases</h3>';
+
+        const ul = document.createElement('ul');
+        data.release_dates.slice(0, 10).forEach(rel => {
+          const li = document.createElement('li');
+          li.textContent = `${rel.date}: ${rel.release_name}`;
+          ul.appendChild(li);
+        });
+
+        container.appendChild(ul);
+      } catch (error) {
+        console.error("Fout bij het ophalen van FRED release data:", error);
       }
     }
-  });
-}
 
-async function fetchFredReleaseDates() {
-  const url = `${FRED_RELEASE_DATES}?api_key=${FRED_API_KEY}&file_type=json`;
-  const response = await fetch(url);
-  const data = await response.json();
-  const list = document.getElementById('releaseDates');
-  list.innerHTML = '';
-  data.release_dates.slice(0, 10).forEach(rel => {
-    const li = document.createElement('li');
-    li.textContent = `${rel.date}: ${rel.release_name}`;
-    list.appendChild(li);
-  });
-}
+    // Initieel laden
+    updateChart();
+    fetchFredReleaseDates();
+  </script>
 
-updateChart();
-fetchFredReleaseDates();
-</script>
 </body>
 </html>
