--- a/index.html
+++ b/index.html
@@ -1,97 +1,116 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crypto & FRED Indicatoren</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crypto & FRED Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f7f9fc;
-      color: #333;
+      background-color: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h2 {
       text-align: center;
     }
-
-    h2 {
-      margin-bottom: 10px;
+    #controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
     }
-
-    .controls {
-      margin-bottom: 15px;
-    }
-
-    .controls label {
+    #controls label {
       margin-right: 10px;
     }
-
-    button {
-      margin-top: 10px;
-      padding: 8px 16px;
-      background-color: #007acc;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    #chart-container {
+      width: 100%;
+      height: 500px;
     }
-
-    button:hover {
-      background-color: #005fa3;
+    canvas {
+      width: 100% !important;
+      height: 100% !important;
     }
-
-    #release-info {
-      margin-top: 40px;
+    #release-table {
+      margin: 40px auto;
+      width: 90%;
+      max-width: 900px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    #release-table table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    #release-table th, #release-table td {
+      border: 1px solid #ccc;
+      padding: 10px;
       text-align: left;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      background: #ffffff;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-
-    #release-info h3 {
-      margin-top: 0;
+    #release-table th {
+      background-color: #f0f0f0;
     }
   </style>
 </head>
 <body>
-
   <h2>Crypto & FRED Indicatoren</h2>
-
-  <div class="controls">
-    <label><input type="checkbox" class="indicator" value="GDP"> BBP (GDP)</label>
-    <label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
-    <label><input type="checkbox" class="indicator" value="CPIAUCNS"> Inflatie (CPI)</label>
-    <label><input type="checkbox" class="indicator" value="PPIACO"> Producentenprijsindex</label>
-    <label><input type="checkbox" class="indicator" value="PERMIT"> Nieuwe woningen</label>
-    <br>
-    <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (€)</label>
-    <label><input type="checkbox" class="crypto" value="ripple"> XRP (€)</label>
-    <label><input type="checkbox" class="crypto" value="vechain"> VeChain (€)</label>
-    <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle (€)</label>
-    <br>
-    <button onclick="updateChart()">Update Grafiek</button>
+  <div id="controls">
+    <div>
+      <strong>FRED:</strong>
+      <label><input type="checkbox" class="indicator" value="GDP"> BBP (GDP)</label>
+      <label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
+      <label><input type="checkbox" class="indicator" value="CPIEUCSL"> Inflatie (CPI)</label>
+    </div>
+    <div>
+      <strong>Crypto:</strong>
+      <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (€)</label>
+      <label><input type="checkbox" class="crypto" value="ripple"> XRP (€)</label>
+      <label><input type="checkbox" class="crypto" value="vechain"> VeChain (€)</label>
+      <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle (€)</label>
+    </div>
+    <div>
+      <label>Van: <input type="date" id="fromDate"></label>
+      <label>Tot: <input type="date" id="toDate"></label>
+      <button onclick="updateChart()">Update Grafiek</button>
+    </div>
   </div>
 
-  <canvas id="chart" width="1000" height="500"></canvas>
+  <div id="chart-container">
+    <canvas id="chart"></canvas>
+  </div>
 
-  <div id="release-info"></div>
+  <div id="release-table">
+    <h3>Recente FRED Releasedata</h3>
+    <table>
+      <thead>
+        <tr><th>Datum</th><th>Release</th><th>Link</th></tr>
+      </thead>
+      <tbody id="release-list"></tbody>
+    </table>
+  </div>
 
   <script>
     const ctx = document.getElementById('chart').getContext('2d');
     let chart;
-
     const FRED_API_KEY = '2e36ea2956c8ea9b075070975eb33c66';
     const FRED_BASE = 'https://api.stlouisfed.org/fred/series/observations';
     const CRYPTO_API = 'https://api.coingecko.com/api/v3/coins';
 
     async function fetchFredData(seriesId) {
-      const response = await fetch(`${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json`);
+      const from = document.getElementById('fromDate').value;
+      const to = document.getElementById('toDate').value;
+      const url = `${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json` +
+        (from ? `&observation_start=${from}` : '') + (to ? `&observation_end=${to}` : '');
+      const response = await fetch(url);
       const data = await response.json();
-      return data.observations.map(obs => ({ x: obs.date, y: parseFloat(obs.value) }));
+      return data.observations
+        .filter(obs => obs.value !== ".")
+        .map(obs => ({ x: obs.date, y: parseFloat(obs.value) }));
     }
 
     async function fetchCryptoPrices(id) {
@@ -112,7 +131,7 @@
           data,
           borderColor: getRandomColor(),
           yAxisID: 'y',
-          tension: 0.3
+          tension: 0.4
         });
       }
 
@@ -123,60 +142,65 @@
           data,
           borderColor: getRandomColor(),
           yAxisID: 'y1',
-          tension: 0.3
+          tension: 0.4
         });
       }
 
       if (chart) chart.destroy();
-
       chart = new Chart(ctx, {
         type: 'line',
         data: { datasets },
         options: {
           responsive: true,
           interaction: { mode: 'index', intersect: false },
+          stacked: false,
+          plugins: {
+            legend: { position: 'top' },
+          },
           scales: {
-            y: { type: 'linear', position: 'left' },
-            y1: { type: 'linear', position: 'right' }
+            x: {
+              type: 'time',
+              time: {
+                unit: 'month'
+              }
+            },
+            y: {
+              type: 'linear',
+              position: 'left',
+              title: { display: true, text: 'Economische Indicatoren' }
+            },
+            y1: {
+              type: 'linear',
+              position: 'right',
+              title: { display: true, text: 'Crypto (€)' },
+              grid: { drawOnChartArea: false }
+            }
           }
         }
       });
+    }
+
+    async function fetchFredReleaseDates() {
+      const res = await fetch(`https://api.stlouisfed.org/fred/releases?api_key=${FRED_API_KEY}&file_type=json`);
+      const json = await res.json();
+      const releases = json.releases.slice(0, 10);
+      const list = document.getElementById('release-list');
+      list.innerHTML = '';
+      for (let r of releases) {
+        const row = `<tr><td>${r.realtime_start}</td><td>${r.name}</td><td><a href="${r.link}" target="_blank">Meer info</a></td></tr>`;
+        list.innerHTML += row;
+      }
     }
 
     function getRandomColor() {
       return `rgb(${[1, 2, 3].map(() => Math.floor(Math.random() * 255)).join(',')})`;
     }
 
-    async function fetchFredReleaseDates() {
-      try {
-        const response = await fetch(`https://api.stlouisfed.org/fred/releases/dates?api_key=${FRED_API_KEY}&file_type=json`);
-        const data = await response.json();
-
-        if (!data.release_dates) {
-          console.error("Geen release_dates gevonden in API response:", data);
-          return;
-        }
-
-        const container = document.getElementById('release-info');
-        container.innerHTML = '<h3>Laatste FRED Releases</h3>';
-
-        const ul = document.createElement('ul');
-        data.release_dates.slice(0, 10).forEach(rel => {
-          const li = document.createElement('li');
-          li.textContent = `${rel.date}: ${rel.release_name}`;
-          ul.appendChild(li);
-        });
-
-        container.appendChild(ul);
-      } catch (error) {
-        console.error("Fout bij het ophalen van FRED release data:", error);
-      }
-    }
-
-    // Initieel laden
+    // Init
+    document.getElementById('fromDate').value = '2024-01-01';
+    document.getElementById('toDate').value = new Date().toISOString().split('T')[0];
     updateChart();
     fetchFredReleaseDates();
   </script>
-
 </body>
 </html>
